<resources>
    <string name="app_name">ExPLoRAA</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">No account yet? Create a new one</string>
    <string name="stimuli">Stimuli</string>
    <string name="lessons">Lessons</string>
    <string name="following_lessons">Following lessons</string>
    <string name="teaching_lessons">Teaching lessons</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="connect_empatica_e4">Connect Empatica E4</string>
    <string name="disconnect_empatica_e4">Disconnect Empatica E4</string>
    <string name="location_rationale">The ExPLoRAA application requires GPS location for providing finer personalization capabilitites</string>
    <string name="ok">ok</string>
    <string name="connection_status">Connection status</string>
    <string name="lesson_status">Lesson status</string>
</resources>
